# bluez-alsa

./: configure.ac
doc/: Makefile.am  bluealsa-aplay.1.md  bluealsa-rfcomm.1.md  bluealsa.8.md
